--- a/aquario/index.html
+++ b/aquario/index.html
@@ -4,93 +4,94 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title> Aquário 🐟</title>
+    <link rel="shortcut icon" href="assets/aquario2.jpg" type="image/x-icon">
+    <title>Aquário 🦈</title>
 </head>
 <body>
-    <!-- tag semantica para cabeçalho -->
+    <!-- Tag semântica para cabeçalho 'header' -->
     <header class="menu">
         <a href="#">Logo</a>
         <nav>
             <ul class="lista">
                 <li><a href="#">Sobre</a></li>
                 <li><a href="#">Produtos</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="#">Contatos</a></li>
             </ul>
         </nav>
     </header>
 
     <!-- primeira parte -->
-    <h1>Flexbox - Colunas de imagens 🖼️</h1>
+    <h1>Flexbox - Coluna de imagens 🖼️</h1>
     <section class="flex">
         <div>
             <img src="assets/aquario1.jpg" alt="">
-                <p>Golfinhos</p>
-        
+            <p>Golfinhos</p>
         </div>
         <div>
             <img src="assets/aquario2.jpg" alt="">
-                <p>Pinguins</p>
+            <p>Pinguins</p>
         </div>
         <div>
             <img src="assets/aquario3.jpg" alt="">
-                <p>Peixes Palhaços</p>
+            <p>Peixes palaços</p>
         </div>
         <div>
             <img src="assets/aquario4.jpg" alt="">
-                <p>Peixe Boi</p>
+            <p>Peixe boi</p>
         </div>
         <div>
             <img src="assets/aquario5.jpg" alt="">
-                <p>Aquário</p>
+            <p>Aquário</p>
         </div>
         <div>
             <img src="assets/aquario6.jpg" alt="">
-                <p>Arraias</p>
+            <p>Arraias</p>
         </div>
     </section>
+
     <h1>Grid 1 - colunas e linhas</h1>
 
     <section class="grid1">
-        <div>
-            <img src="assets/aquario1.jpg">
-            <p>Legenda</p>
-        </div>
-        <div>
-            <img src="assets/aquario2.jpg">
-            <p>Legenda</p>
-        </div>
-        <div>
-            <img src="assets/aquario3.jpg">
-            <p>Legenda</p>
-        </div>
-        <div>
-            <img src="assets/aquario4.jpg">
-            <p>Legenda</p>
-        </div>
-        <div>
-            <img src="assets/aquario5.jpg">
-            <p>Legenda</p>
-        </div>
-        <div>
-            <img src="assets/aquario6.jpg">
-            <p>Legenda</p>
-        </div>
-        <div>
-            <img src="assets/aquario1.jpg">
-            <p>Legenda</p>
-        </div>
-        <div>
-            <img src="assets/aquario2.jpg">
-            <p>Legenda</p>
-        </div>
-        <div>
-            <img src="assets/aquario3.jpg">
-            <p>Legenda</p>
-        </div>
-        <div class="anuncio">
-            <img src="assets/anuncio.jpg">
-            <p>Anúncio</p>
-        </div>
+      <div>
+        <img src="assets/aquario1.jpg">
+        <p>Legenda</p>
+      </div>
+      <div>
+        <img src="assets/aquario2.jpg">
+        <p>Legenda</p>
+      </div>
+      <div>
+        <img src="assets/aquario3.jpg">
+        <p>Legenda</p>
+      </div>
+      <div>
+        <img src="assets/aquario4.jpg">
+        <p>Legenda</p>
+      </div>
+      <div>
+        <img src="assets/aquario5.jpg">
+        <p>Legenda</p>
+      </div>
+      <div>
+        <img src="assets/aquario6.jpg">
+        <p>Legenda</p>
+      </div>
+      <div>
+        <img src="assets/aquario1.jpg">
+        <p>Legenda</p>
+      </div>
+      <div>
+        <img src="assets/aquario2.jpg">
+        <p>Legenda</p>
+      </div>
+      <div>
+        <img src="assets/aquario3.jpg">
+        <p>Legenda</p>
+      </div>
+      <div class="anuncio">
+        <img src="assets/anuncio.jpg">
+        <p>Anúncio</p>
+      </div>
     </section>
 
     <h1>Grid 2 - Coluna e navegação horizontal</h1>
@@ -119,6 +120,7 @@
         </div>
       </div>
     </section>
+
     <h1>Grid 3 - Coluna e linha com item destaque</h1>
 
     <section class="grid3">
